--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <title>Happy Birthday</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+
+    <!-- ❌ REMOVED BROKEN BOOTSTRAP LINK -->
+    <!-- <link rel="stylesheet" href="css/bootstrap.min.css"> -->
+
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+
+    <!-- START SCREEN -->
     <div class="container">
         <div class="row">
             <div class="loader">
@@ -16,46 +21,23 @@
             </div>
         </div>
     </div>
-    <audio class="song" controls loop>
-        <source src="music.mp3">
-        </source>
-        Your browser isn't invited for super fun audio time.
+
+    <!-- AUDIO -->
+    <audio class="song" loop>
+        <source src="music.mp3" type="audio/mpeg">
+        Your browser does not support audio.
     </audio>
+
     <canvas id="confetti"></canvas>
-    <div class="main">
+
+    <!-- MAIN CONTENT (HIDDEN UNTIL START) -->
+    <div class="main" style="display:none;">
         <div class="container pt-5">
             <div class="row">
 
-                <div class="col-12 col-xl-6 mx-auto">
+                <div class="col-12">
                     <img src="img/banner.png" alt="">
                 </div>
 
-                <div class="col-12  text-center">
-                    <div id="name" class="area">Doochuu</div>
-                </div>
-
                 <div class="col-12 text-center">
-                    <div class="type-wrap">
-                        <div id="typed-strings" class="typing">
-                            <h2>Happy Birthday <i id="nae">Doochuu</i></h2>
-                            <h2>Have a wonderful day</h2>
-                            <h2>Filled with joy and happiness.</h2>
-                        </div>
-                        <span id="typed" style="white-space:pre;"></span>
-                    </div>
-                </div>
-
-                <div class="col-12 col-xl-3 cake">
-                    <img src="img/cake.gif" alt="">
-                </div>
-            </div>
-        </div>
-        <img src="img/Balloon-Border.png" width="100%" class="balloon-border">
-    </div>
-</body>
-<script src="https://unpkg.com/magic-snowflakes/dist/snowflakes.min.js"></script>
-<script src="js/jquery.js"></script>
-<script src="js/typed.min.js"></script>
-<script src="js/script.js"></script>
-
-</html>
+                    <div id="name" class="are
