--- a/index.html
+++ b/index.html
@@ -1,18 +1,74 @@
-document.addEventListener("DOMContentLoaded", function () {
-    const playBtn = document.getElementById("play");
-    const song = document.querySelector(".song");
-    const loader = document.querySelector(".loader");
-    const main = document.querySelector(".main");
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Happy Birthday</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    playBtn.addEventListener("click", async function () {
-        try {
-            await song.play(); // mobile-safe
-        } catch (e) {
-            console.log("Audio blocked, continuing anyway");
-        }
+    <!-- Custom CSS only -->
+    <link rel="stylesheet" href="style.css">
+</head>
 
-        loader.style.display = "none";
-        main.style.display = "block";
-    });
-});
+<body>
+
+    <!-- START SCREEN -->
+    <div class="container">
+        <div class="row">
+            <div class="loader">
+                <button id="play">Start</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- AUDIO (iPhone safe) -->
+    <audio class="song" preload="auto" playsinline>
+        <source src="music.mp3" type="audio/mpeg">
+    </audio>
+
+    <!-- CONFETTI -->
+    <canvas id="confetti"></canvas>
+
+    <!-- MAIN CONTENT -->
+    <div class="main" style="display:none;">
+        <div class="container pt-5">
+            <div class="row">
+
+                <div class="col-12">
+                    <img src="img/banner.png" alt="">
+                </div>
+
+                <div class="col-12 text-center">
+                    <div id="name" class="area">Doochuu</div>
+                </div>
+
+                <div class="col-12 text-center">
+                    <div class="type-wrap">
+                        <div id="typed-strings">
+                            <h2>Happy Birthday <i>Doochuu</i></h2>
+                            <h2>Have a wonderful day</h2>
+                            <h2>Filled with joy and happiness.</h2>
+                        </div>
+                        <span id="typed"></span>
+                    </div>
+                </div>
+
+                <div class="col-12 cake">
+                    <img src="img/cake.gif" alt="">
+                </div>
+
+            </div>
+        </div>
+
+        <img src="img/Balloon-Border.png" width="100%" class="balloon-border">
+    </div>
+
+    <!-- SCRIPTS (ORDER MATTERS) -->
+    <script src="https://unpkg.com/magic-snowflakes/dist/snowflakes.min.js"></script>
+    <script src="js/jquery.js"></script>
+    <script src="js/typed.min.js"></script>
+    <script src="js/script.js"></script>
+
+</body>
+</html>
+
 
